added byline in footer

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 <div class="content">
       <p>Praesent eu est eu nisl venenatis aliquam a sit amet sapien. Quisque quis elit non arcu hendrerit consectetur eu ut est. Nunc sit amet luctus dolor, in ornare ante. Phasellus ornare lectus vitae ligula aliquam bibendum. Nulla egestas, quam in aliquet cursus, odio felis iaculis augue, non luctus turpis arcu vitae mauris. Vivamus euismod velit sit amet felis dictum pretium. Fusce sodales et nulla dictum feugiat. Ut et suscipit ligula. Vestibulum rutrum cursus lorem, quis porta lacus. Cras at diam et felis sollicitudin consectetur id vel quam. In purus augue, tempus ut venenatis in, sodales et ligula. Nulla pharetra lorem dui, sed semper turpis iaculis vitae. Vestibulum tortor ligula, gravida in nisl cursus, pharetra vulputate risus. Curabitur mi ipsum, fringilla sed suscipit ac, maximus at massa.</p>
     </div>
+    <div id="footer">By Sarah Stanley.</div>
     </body>
 </html>
