changed to contain bio and image

--- a/index.html
+++ b/index.html
@@ -3,21 +3,13 @@
 <link rel="stylesheet" type="text/css" href="mystyle.css"/>
 <html>
     <head>
-      <title>Sarah's website</title>
+      <title>Sarah Stanley</title>
     </head>
     <body>
-      <h1>I am a header!</h1>
-      <div class="columns">
-      <p>Lorem ipsum dolor sit amet,<a>*<span class="note">Lorem ipsum is an old typesetter's convention, consisting of nonsense latin, and is used to show type and font styles</span></a> consectetur adipiscing elit. Sed at metus vulputate, convallis justo a, condimentum orci. Nunc maximus convallis diam sit amet volutpat. Donec consectetur diam vel laoreet consequat. Nunc pharetra gravida mi, id fermentum tortor laoreet in. In metus libero, accumsan ut libero in, lacinia porttitor arcu. Nullam bibendum gravida massa, in gravida sem eleifend vel. Maecenas lobortis diam non ullamcorper tincidunt. Cras luctus nunc quis rhoncus tincidunt. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse at ultrices justo, sed ornare nulla. Maecenas eu accumsan sapien. Nunc id eros egestas, consectetur lectus sit amet, egestas justo. Nam eget erat sodales, auctor sem a, interdum magna.</p>
-    </div>
-
-    <div class="columns">
-      <p>Nulla imperdiet dolor ac rhoncus finibus. Suspendisse sed tristique arcu. Vivamus blandit gravida gravida. Aliquam blandit sed ante a vulputate. Pellentesque accumsan, metus sed tristique ornare, purus tortor accumsan orci, in viverra mauris dui a ex. Maecenas luctus arcu ac lorem consectetur cursus. Vestibulum at justo sit amet nunc rutrum tempor. Suspendisse placerat diam arcu, id hendrerit nibh semper eget. Nullam vitae nibh eros. Curabitur sodales neque a faucibus impercontentdiet. Curabitur faucibus eleifend varius.</p>
-    </div>
-
-<div class="content">
-      <p>Praesent eu est eu nisl venenatis aliquam a sit amet sapien. Quisque quis elit non arcu hendrerit consectetur eu ut est. Nunc sit amet luctus dolor, in ornare ante. Phasellus ornare lectus vitae ligula aliquam bibendum. Nulla egestas, quam in aliquet cursus, odio felis iaculis augue, non luctus turpis arcu vitae mauris. Vivamus euismod velit sit amet felis dictum pretium. Fusce sodales et nulla dictum feugiat. Ut et suscipit ligula. Vestibulum rutrum cursus lorem, quis porta lacus. Cras at diam et felis sollicitudin consectetur id vel quam. In purus augue, tempus ut venenatis in, sodales et ligula. Nulla pharetra lorem dui, sed semper turpis iaculis vitae. Vestibulum tortor ligula, gravida in nisl cursus, pharetra vulputate risus. Curabitur mi ipsum, fringilla sed suscipit ac, maximus at massa.</p>
-    </div>
-    <div id="footer"><p>By Sarah Stanley.</p></div>
-    </body>
-</html>
+      <h1>Sarah Stanley</h1>
+      <img src="stanley.JPG" alt="An image of Sarah Stanley" width="350px" height="467px">
+      <div class="content">
+        <p>My name is Sarah Stanley and I am the Digital Humanities Librarian at Florida State University. I work in Strozier Library in the Office of Digital Research and Scholarship.</p>
+        <p>I hold a master's degree in English from Northeastern University, where I studied digital humanities, late medieval and early modern women's writing, and digital textual editing. I currently serve on the technical council of the Text Encoding Initiative.</p>
+        <p>For my most recent writing on digital humanities, see my blog http://scatherinestanley.us</p>
+      </div>
