changed styling and photo class

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       <h1>Sarah Stanley</h1>
-      <img src="stanley.JPG" alt="An image of Sarah Stanley" width="350px" height="467px">
+      <img class="headshot" src="stanley.JPG" alt="An image of Sarah Stanley" width="350px" height="467px">
       <div class="content">
         <p>My name is Sarah Stanley and I am the Digital Humanities Librarian at Florida State University. I work in Strozier Library in the Office of Digital Research and Scholarship.</p>
         <p>I hold a master's degree in English from Northeastern University, where I studied digital humanities, late medieval and early modern women's writing, and digital textual editing. I currently serve on the technical council of the Text Encoding Initiative.</p>
