--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
-<html lang="en">
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="preconnect" href="https://fonts.googleapis.com">
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
-  <title>Sarah Stanley</title>
-</head>
+    <title>Sarah Stanley</title>
+  </head>
+  <body>
+    
+    <header>
+      <h1>Sarah Stanley</h1>
+    </header>
+    <div class="container">
+      <div id="about-me">
+     	<img src="stanley.jpg" width="200px" height="267px" style="float:right;"/>
+	<p>My name is Sarah Stanley and I am a Master's in Teaching student at Moravian University. Formerly, I worked as the Digital Humanities Librarian at Florida State University where I taught and consulted on digital research projects and digital literacy.</p>
+      </div>
+      <div id="teaching-philosophy">
+	<p></p>
+      </div>
+      <div id="cv">
+      </div>
+    </div>
+    <footer>
+      <p align="center">This website is powered by GitHub Pages. Unless otherwise noted, the content on this website is &copy; Sarah Stanley and licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International license</a>.<br /><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>.</p>
+    </footer>
+  </body>
+</html>
 
-<body>
-  <div id="menu">
-    <li class="nav">
-      <ul>Home</ul>
-      <ul>Teaching Philosophy</ul>
-      <ul>CV</ul>
-    </li>
-  </div>
-  <img src="stanley.jpg" width="200px" height="267px" style="float:right;"/>
-  <p style="clear:right;">Hello! My name is Sarah Stanley and I am the Digital Humanities Librarian at Florida State University. I do trainings and consultations on data management for humanists, maintaining a scholarly web presence for yourself and for your research projects, and conducting humanistic inquiry with digital tools.</p>
-</body>
 
 
