attempted background image

--- a/index.html
+++ b/index.html
@@ -10,19 +10,27 @@
     <title>Sarah Stanley</title>
   </head>
   <body>
-    
+    <nav>
+     <a href="/">Home</a>
+     <a href="#about-me">About Me</a> 
+     <a href="#teaching-philosophy">Teaching Philosophy</a>
+     <a href="#cv">Curriculum Vitae</a>
+</nav>
     <header>
       <h1>Sarah Stanley</h1>
     </header>
     <div class="container">
       <div id="about-me">
-     	<img src="stanley.jpg" width="200px" height="267px" style="float:right;"/>
+	<h2>About Me</h2>
+     	<img src="assets/images/stanley.jpg" width="200px" height="267px" style="float:right;"/>
 	<p>My name is Sarah Stanley and I am a Master's in Teaching student at Moravian University. Formerly, I worked as the Digital Humanities Librarian at Florida State University where I taught and consulted on digital research projects and digital literacy.</p>
       </div>
       <div id="teaching-philosophy">
+	<h2>Teaching Philosophy</h2>
 	<p></p>
       </div>
       <div id="cv">
+	<h2>Curriculum Vitae</h2>
       </div>
     </div>
     <footer>
