--- a/cv/index.html
+++ b/cv/index.html
@@ -12,9 +12,8 @@
   <body>
     <nav>
      <a href="/">Home</a>
-     <a href="/#about-me">About Me</a> 
-     <a href="/#teaching-philosophy">Teaching Philosophy</a>
-     <a href="/cv/">Curriculum Vitae</a>
+     <a href="/portfolio/">Portfolio</a>
+     <a href="/cv/">C.V.</a>
     </nav>
     <header>
       <h1>Curriculum Vitae</h1>
