--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,12 +24,18 @@
       </div>
       <div id="EDUC502">
 	<h2>EDUC502: Teaching English Language Learners</h2>
-	<p></p>
+	<p>The following document was created for Teaching English Language Learners.</p>
+	<iframe src="https://docs.google.com/document/d/e/2PACX-1vSD2pTIkCH0yVcT0uqa0MLh0MR9mZTW29QUjm1EMLBLFEotuQ65ynRF5Q8TpGJ8dq-WW-W2xqIQUCVa/pub?embedded=true"></iframe>
       </div>
       <div id="EDUC534">
 	<h2>EDUC534: Family Resource Guide</h2>
 	<p>This Family Resource Guide provides information on how to support students with Epilepsy. It, along with the other presentations from class, will help to think through how best to support students with disabilities.</p>
 	<iframe src="https://docs.google.com/presentation/d/1P-_ZmcDnEJm3O8fy60DH2OfIEN493lSUcDiPGZeN6uE/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+      </div>
+      <div id="EDUC540">
+	<h2>EDUC540: Reflective Teaching in Secondary Schools</h2>
+	<p>This document contains my reflections on my own education and how I think those experiences may impact the way I teach and interact with students.</p>
+	<iframe src="https://docs.google.com/document/d/e/2PACX-1vSCstjHuhBrdmIj3ITUTrZeOmivCI2K1pjSWaxamOnqII0LW_eXsosL-F_cKVGrXsBXhxwGKhZD1F-w/pub?embedded=true"></iframe>
       </div>
     </div>
     <footer>
