--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -25,7 +25,7 @@
       <div id="EDUC502">
 	<h2>EDUC502: Teaching English Language Learners</h2>
 	<p>The following document was created for Teaching English Language Learners.</p>
-	<iframe src="https://docs.google.com/document/d/e/2PACX-1vSD2pTIkCH0yVcT0uqa0MLh0MR9mZTW29QUjm1EMLBLFEotuQ65ynRF5Q8TpGJ8dq-WW-W2xqIQUCVa/pub?embedded=true"></iframe>
+	<iframe src="https://docs.google.com/document/d/e/2PACX-1vSD2pTIkCH0yVcT0uqa0MLh0MR9mZTW29QUjm1EMLBLFEotuQ65ynRF5Q8TpGJ8dq-WW-W2xqIQUCVa/pub?embedded=true"frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
       <div id="EDUC534">
 	<h2>EDUC534: Family Resource Guide</h2>
@@ -35,7 +35,7 @@
       <div id="EDUC540">
 	<h2>EDUC540: Reflective Teaching in Secondary Schools</h2>
 	<p>This document contains my reflections on my own education and how I think those experiences may impact the way I teach and interact with students.</p>
-	<iframe src="https://docs.google.com/document/d/e/2PACX-1vSCstjHuhBrdmIj3ITUTrZeOmivCI2K1pjSWaxamOnqII0LW_eXsosL-F_cKVGrXsBXhxwGKhZD1F-w/pub?embedded=true"></iframe>
+	<iframe src="https://docs.google.com/document/d/e/2PACX-1vSCstjHuhBrdmIj3ITUTrZeOmivCI2K1pjSWaxamOnqII0LW_eXsosL-F_cKVGrXsBXhxwGKhZD1F-w/pub?embedded=true"frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
     </div>
     <footer>
