Updated employment and field experience

--- a/cv/index.html
+++ b/cv/index.html
@@ -29,6 +29,19 @@
 	   <h3>Ithaca College (Ithaca, NY)</h3>
 		<p>&nbsp;&nbsp;&nbsp;&nbsp;B.A. in English<br>&nbsp;&nbsp;&nbsp;&nbsp;May 2013</p>
 <hr>
+<h2 id="field-experience">Field Experience and Student Teaching</h2>
+<h3>Pre-Student Teaching Field Experience</h3>
+<ul>
+<li>Nitschmann Middle School, October-December 2024
+<ul><li>7th Grade English Language Arts</li>
+<li>Mrs. Julie Getz, cooperating teacher</li>
+</ul></li>
+<li>Lehigh Valley Summerbridge, June-August 2024
+<ul><li>9th Grade Social Studies</li>
+<li>Mr. Jarred Weaver, cooperating teacher</li>
+</ul></li>
+</ul>
+<hr>
 <h2 id="work-experience">Work Experience</h2>
 <h3>Lehigh Valley Summerbridge (Bethlehem, PA) <br>June 2024-July 2024</h3>
 <ul>
@@ -38,9 +51,9 @@
 <ul>
 <li>Substitute Teacher</li>
 </ul>
-<h3 id="florida-state-university-tallahassee-fl-br-november-2015-present-">Florida State University (Tallahassee, FL) <br/> <em>November 2015-present</em></h3>
+<h3 id="florida-state-university-tallahassee-fl-br-november-2015-present-">Florida State University (Tallahassee, FL) <br/> <em>November 2015-December 2023</em></h3>
 <ul>
-<li>Digital Humanities Librarian <em>(April 2017-present)</em><ul>
+<li>Digital Humanities Librarian <em>(April 2017-December 2024)</em><ul>
 <li>Build university-wide programs for training and project development in the digital humanities</li>
 <li>Consult with faculty on digital humanities project development</li>
 <li>Lead workshops on digital humanities topics for faculty, graduate students, and undergraduates</li>
@@ -83,7 +96,7 @@
 <h2 id="teaching">Teaching</h2>
 <ul>
 <li>Music and Culture <em>(Summer 2024)</em></li>
-<li>Museum Informatics <em>(Fall 2023)</em>)</li>
+<li>Museum Informatics <em>(Fall 2023)</em></li>
 <li>Digital Humanities II, Humanities Curation <em>(Fall 2017)</em></li>
 </ul>
 <hr>
