more attempted fixes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div id="about-me">
 	<h2>About Me</h2>
-     	<img src="assets/images/stanley.jpg" width="200px" height="267px" style="float:right;"/>
+     	<img src="assets/images/stanley.jpg" width="200px" height="267px" style="float:right;margin-left-10px;"/>
 	<p>My name is Sarah Stanley and I am a Master's in Teaching student at Moravian University. Formerly, I worked as the Digital Humanities Librarian at Florida State University where I taught and consulted on digital research projects and digital literacy.</p>
 	<p>I am currently pursuing a certification in teaching Secondary English (Grades 7-12). I am particularly interested in teaching English as a vehicle for information literacy. According to the Association for College and Research Libraries (ACRL), information literacy is "the set of integrated abilities encompassing the reflective discovery of information, the understanding of how information is produced and valued, and the use of information in creating new knowledge and participating ethically in communities of learning." I believe that information literacy is an invaluable asset in the age of the internet and social media. It is important that we teach students language arts so that they can more effectively evaluate the information they encounter every day through their phones and other media.</p>
 	<p>In addition to teaching, I enjoy baking, running, and knitting. I also have a background in classical voice, and have performed with a variety of choirs across the country.</p>
