updated teaching philosophy and home

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
      <a href="/">Home</a>
      <a href="/portfolio/">Portfolio</a>
+     <a href="/philosophy/">Teaching Philosophy</a>
      <a href="/cv/">C.V.</a>
 </nav>
     <header>
@@ -26,11 +27,15 @@
 	<p>I am currently pursuing a certification in teaching Secondary English (Grades 7-12). I am particularly interested in teaching English as a vehicle for information literacy. According to the Association for College and Research Libraries (ACRL), information literacy is "the set of integrated abilities encompassing the reflective discovery of information, the understanding of how information is produced and valued, and the use of information in creating new knowledge and participating ethically in communities of learning." I believe that information literacy is an invaluable asset in the age of the internet and social media. It is important that we teach students language arts so that they can more effectively evaluate the information they encounter every day through their phones and other media.</p>
 	<p>In addition to teaching, I enjoy baking, running, and knitting. I also have a background in classical voice, and have performed with a variety of choirs across the country.</p>
       </div>
-      <div id="teaching-philosophy">
-	<h2>Teaching Philosophy</h2>
-	<p>My goal as a teacher is to instill a sense of curiosity in all of my students, both for the world around them and the people they encounter every day. I believe that English Language Arts has the potential to expose students to different ways of thinking and knowing, and get them to think critically about their own assumptions.</p>
-	<p>I am also invested in getting my students to look critically at sources of information. I have a background in librarianship, and in those positions, I had to teach students how to search, retrieve, and evaluate a variety of information sources. Skills in English literature, language, and rhetoric are essential for evaluating the message of a piece of media and determining its veracity, reliability, and usefulness. I want to blend my background in both librarianship and English to inspire students to think critically, not only about literature, but the other sources of media they encounter every day.</p>
-      </div>
+    </div>
+    <div id="materials">
+      <table>
+        <tr>
+	  <td><a href="/philosophy/">Teaching Philosophy</a></td>
+	  <td><a href="/portfolio/">Portfolio Materials</a></td>
+	  <td><a href="/cv/">Curriculum Vitae</a></td>
+        </tr>
+      </table>
     </div>
     <footer>
       <p align="center">This website is powered by GitHub Pages. Unless otherwise noted, the content on this website is &copy; Sarah Stanley and licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International license</a>.<br /><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>.</p>
