--- a/cv/index.html
+++ b/cv/index.html
@@ -13,7 +13,7 @@
     <nav>
      <a href="/">Home</a>
      <a href="/portfolio/">Portfolio</a>
-     <a href="/philosophy/">Teaching Philosophy</a>
+     <a href="/philosophy/">Philosophy</a>
      <a href="/cv/">C.V.</a>
     </nav>
     <header>
