--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
      <a href="/">Home</a>
      <a href="/portfolio/">Portfolio</a>
-     <a href="/philosophy/">Teaching Philosophy</a>
+     <a href="/philosophy/">Philosophy</a>
      <a href="/cv/">C.V.</a>
 </nav>
     <header>
@@ -27,15 +27,6 @@
 	<p>I am currently pursuing a certification in teaching Secondary English (Grades 7-12). I am particularly interested in teaching English as a vehicle for information literacy. According to the Association for College and Research Libraries (ACRL), information literacy is "the set of integrated abilities encompassing the reflective discovery of information, the understanding of how information is produced and valued, and the use of information in creating new knowledge and participating ethically in communities of learning." I believe that information literacy is an invaluable asset in the age of the internet and social media. It is important that we teach students language arts so that they can more effectively evaluate the information they encounter every day through their phones and other media.</p>
 	<p>In addition to teaching, I enjoy baking, running, and knitting. I also have a background in classical voice, and have performed with a variety of choirs across the country.</p>
       </div>
-    </div>
-    <div id="materials">
-      <table>
-        <tr>
-	  <td><a href="/philosophy/">Teaching Philosophy</a></td>
-	  <td><a href="/portfolio/">Portfolio Materials</a></td>
-	  <td><a href="/cv/">Curriculum Vitae</a></td>
-        </tr>
-      </table>
     </div>
     <footer>
       <p align="center">This website is powered by GitHub Pages. Unless otherwise noted, the content on this website is &copy; Sarah Stanley and licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International license</a>.<br /><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a>.</p>
