--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,30 +13,27 @@
     <nav>
      <a href="/">Home</a>
      <a href="/portfolio/">Portfolio</a>
-     <a href="/philosophy/">Teaching Philosophy</a>
+     <a href="/philosophy/">Philosophy</a>
      <a href="/cv/">C.V.</a>
 </nav>
     <header>
       <h1>Moravian University Portfolio</h1>
     </header>
     <div class="container">
-      <div id="intro">
-	<p style="font-style:italic;">This page contains the necessary materials for my portfolio for Moravian University's MA in Teaching program. This page will be updated with course requirements throughout my time in the program.</p>
+      <div id="voyant-motifs">
+	<h2>Using Innovative Technology in the Classroom</h2>
+	<p>This activity was used with a 12th grade Honors English class. This activity is designed to get students thinking about wider motifs within the play <em>Macbeth</em>, but the activity could easily be adapted to other long texts, such as novels. By exploring word frequency with <a href="https://voyant-tools.org/">Voyant</a>, students were able to see the motif in context and make predictions about how the motif would progress through the play.</p>
+	<iframe src="https://docs.google.com/document/d/e/2PACX-1vRmSlrgR5QeecNAqxVma_cLEA21VWWxcXPz--fCcVuX3S1w7cLbvJ63ETxQgQqbvA/pub?embedded=true" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
-      <div id="EDUC502">
-	<h2>EDUC502: Teaching English Language Learners</h2>
-	<p>The following document was created for Teaching English Language Learners.</p>
-	<iframe src="https://docs.google.com/document/d/e/2PACX-1vSD2pTIkCH0yVcT0uqa0MLh0MR9mZTW29QUjm1EMLBLFEotuQ65ynRF5Q8TpGJ8dq-WW-W2xqIQUCVa/pub?embedded=true"frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+      <div id="soliloquy-line-reading">
+	<h2>Creative Methods for Generating Discussion</h2>
+	<p>This activity was used in a 12th Grade general preparation course. It gave students a collaborative method for thinking through Macbeth's progression as a character through his soliloquies. The students got to demonstrate their understanding through multiple possible means: answering analysis questions, picking out a musical soundtrack that reflects Macbeth's character, and reading the lines dramatically.</p>
+	<iframe src="https://docs.google.com/document/d/e/2PACX-1vTBRXjP3xugPOkiIjfqxKbzQrduiwoCg8ouaDpZpQv94oTRkgZmI2AGPpIVDG1CEilxZLuznNDepQPj/pub?embedded=true" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
-      <div id="EDUC534">
-	<h2>EDUC534: Family Resource Guide</h2>
-	<p>This Family Resource Guide provides information on how to support students with Epilepsy. It, along with the other presentations from class, will help to think through how best to support students with disabilities.</p>
-	<iframe src="https://docs.google.com/presentation/d/1P-_ZmcDnEJm3O8fy60DH2OfIEN493lSUcDiPGZeN6uE/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-      </div>
-      <div id="EDUC540">
-	<h2>EDUC540: Reflective Teaching in Secondary Schools</h2>
-	<p>This document contains my reflections on my own education and how I think those experiences may impact the way I teach and interact with students.</p>
-	<iframe src="https://docs.google.com/document/d/e/2PACX-1vSCstjHuhBrdmIj3ITUTrZeOmivCI2K1pjSWaxamOnqII0LW_eXsosL-F_cKVGrXsBXhxwGKhZD1F-w/pub?embedded=true"frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+      <div id="fabsc-unit-plan">
+	<h2>7th Grade Unit Plan - <em>Flesh and Blood So Cheap</a></h2>
+	<p>This unit contains a unit rationale, lesson plans, reflection, and markup to indicate modifications and additions that I would use in future iterations of the unit. The unit focuses on reading informational text, and exploring primary and secondary sources. The unit culminates in a protest poster to help students make connections between the Triangle Shirtwaist Factory Fire and current labor conditions.</p>
+	<iframe src="https://docs.google.com/document/d/e/2PACX-1vR2fxUCEMVLZviA_GCHF7qCaGXoudyh9eqFNa5TmTjZXE1zzfJYnvs3u4sCP0B4wZNiI_kDiVn4QhXz/pub?embedded=true" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
     </div>
     <footer>
